Added dynamically resizing hash table
Change-Id: I7e15764b3079be76209d60b8d98e5daa0ff288cf

--- a/src/hashing/Makefile.am
+++ b/src/hashing/Makefile.am
@@ -1,6 +1,6 @@
 noinst_LIBRARIES   = libhashing.a
 
-libhashing_a_SOURCES = hash_table.c hash_table.h hash_map.h hash_map.c utils.h utils.c
+libhashing_a_SOURCES = dynamic_hash_table.h dynamic_hash_table.c hash_table.c hash_table.h hash_map.h hash_map.c utils.h utils.c
 
 CLEANFILES      = *.o
 DISTCLEANFILES  = .deps Makefile
