--- a/src/utils/Makefile.am
+++ b/src/utils/Makefile.am
@@ -1,6 +1,7 @@
 noinst_LIBRARIES   = libutils.a
+libutils_a_CFLAGS = -mcx16
 
-libutils_a_SOURCES = set.h queue.c queue.h stack.c stack.h list.c list.h map.h timer.h
+libutils_a_SOURCES = lstack.h lstack.c stack_fixed_size.h stack_fixed_size.c set.h queue.c queue.h stack.c stack.h list.c list.h map.h timer.h ts_stack.c ts_stack.h
 
 CLEANFILES      = *.o
 DISTCLEANFILES  = .deps Makefile
