Now references to class expressions are over ids and not over pointers. The aim is to save memory space sind ids are of type uint32_t.

--- a/src/hashing/Makefile.am
+++ b/src/hashing/Makefile.am
@@ -1,6 +1,6 @@
 noinst_LIBRARIES   = libhashing.a
 
-libhashing_a_SOURCES = dynamic_hash_table.h dynamic_hash_table.c hash_table.c hash_table.h hash_map.h hash_map.c utils.h utils.c dynamic_hash_map.h dynamic_hash_map.c murmur3.h murmur3.c
+libhashing_a_SOURCES = dynamic_hash_table.h dynamic_hash_table.c hash_table.c hash_table.h hash_map.h hash_map.c utils.h utils.c dynamic_hash_map.h dynamic_hash_map.c murmur3.h murmur3.c dynamic_hash_table_64.c dynamic_hash_table_64.h hash_map_64.c hash_map_64.h
 
 CLEANFILES      = *.o
 DISTCLEANFILES  = .deps Makefile
