--- a/src/utils/Makefile.am
+++ b/src/utils/Makefile.am
@@ -1,6 +1,6 @@
 noinst_LIBRARIES   = libutils.a
 
-libutils_a_SOURCES = set.h queue.c queue.h stack.c stack.h list.c list.h map.h timer.h
+libutils_a_SOURCES = set.h queue.c queue.h stack.c stack.h list.c list.h map.h timer.h list_64.h list_64.c
 
 CLEANFILES      = *.o
 DISTCLEANFILES  = .deps Makefile
